...
            "state" : "translated",
            "value" : "Clients"
          }
        }
      }
    },
    "Close" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fermer"
          }
...
            "state" : "translated",
            "value" : "Confirmer le mot de passe"
          }
        }
      }
    },
    "Continue" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continuer"
          }
...
            "state" : "translated",
            "value" : "Document déverrouillé."
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Terminé"
          }
...
            "state" : "translated",
            "value" : "Glissez sur ce qui doit être retiré, ou sélectionnez du texte"
          }
        }
      }
    },
    "Draw" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dessiner"
          }
...
            "state" : "translated",
            "value" : "Impossible d'afficher cet emplacement dans Fichiers."
          }
        }
      }
    },
    "Find in document" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rechercher dans le document"
          }
...
            "state" : "translated",
            "value" : "MegaPDF sur GitHub"
          }
        }
      }
    },
    "More" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Plus"
          }
...
            "state" : "translated",
            "value" : "Nom"
          }
        }
      }
    },
    "Next match" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Résultat suivant"
          }
...
            "state" : "translated",
            "value" : "Ouvrir"
          }
        }
      }
    },
    "Open PDF" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ouvrir un PDF"
          }
...
            "state" : "translated",
            "value" : "Mot de passe…"
          }
        }
      }
    },
    "Photo" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Photo"
          }
...
            "state" : "translated",
            "value" : "Rotation à droite"
          }
        }
      }
    },
    "Save" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enregistrer"
          }
...
            "state" : "translated",
            "value" : "Afficher dans Fichiers"
          }
        }
      }
    },
    "Sign" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Signer"
          }
...
